# menkoverse

./: .env.example  .gitignore  README.md  log.txt  menkoverse-cdk-architecture.drawio  package-lock.json  package.json  test-websocket.js
.github/: copilot-instructions.md
cdk/: .gitignore  README.md  cdk.context.json  package-lock.json  package.json  sam-template.yaml  template.json  tsconfig.json
cdk/.aws-composer/20250704T175403073/: template.json
cdk/.aws-composer/20250704T175511611/: sam-template.yaml
cdk/lambda/stream-processor/: index.ts  package-lock.json  package.json
cdk/lambda/websocket-handler/: index.ts  package-lock.json  package.json
cdk/lib/: app-stack.ts  auth-stack.ts  cdk-stack.ts  core-stack.ts  data-stack.ts  menkoverse-app.ts  opencv-stack.ts  realtime-stack.ts
frontend/: .env.example  apprunner.yaml  next.config.js  package-lock.json  package.json
frontend/menkoverse/: package-lock.json  package.json
frontend/prisma/: schema.prisma  seed.ts
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: useCameraDevices.ts  useCameraStream.ts  useDecks.ts  useGameWebSocket.ts
frontend/src/lib/: atoms.ts  constants.ts  dynamodb-client-old.ts  dynamodb-client.ts  gameLogic.ts  mock-data.ts  mockApi.ts  mockData.ts  types.ts  websocket-client.ts
frontend/src/styles/: globals.css
frontend/src/types/: card.ts  (+3 more)
opencv/: Dockerfile  README.md  apprunner-test.yaml  apprunner.yaml  detect-marker.py  generate-marker.py  main.py  marker_detector.py  pyproject.toml  requirements.txt  test_api.py  test_simple.py
(+75 files in other folders)
