[project]
name = "opencv"
version = "0.1.0"
description = "ArUco marker detection API using OpenCV and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "opencv-python>=4.8.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]
